[change] project uses (mostly) `io.vavr.Option` and `io.vavr.List` (#192)
* options 1

* options 2

* options 3

* contributing update

* option 4

* list 1

* list 2

* changelog update

* format